Add_changes_to_styles

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -273,6 +273,7 @@
 
 .footer_privacy_policy_text_part_2:hover {
     color: #7b83bb;
+    margin-top: 5px;
 }
 
 @media (min-width: 320px) and (max-width: 1440px) {
@@ -712,66 +713,59 @@
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
         transition-duration: 140ms;
     }
-    /*.footer_section_text:hover {*/
-    /*    color: #7b83bb;*/
-    /*}*/
-    /*.footer_section_contacts_tel {*/
-    /*    cursor: pointer;*/
-    /*    font-size: 16px;*/
-    /*    font-weight: 500;*/
-    /*    line-height: 20px;*/
-    /*    color: #E4E5EA;*/
-    /*    transition-property: all;*/
-    /*    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);*/
-    /*    transition-duration: 140ms;*/
-    /*}*/
-    /*.footer_section_contacts_tel:hover {*/
-    /*    color: #7b83bb;*/
-    /*}*/
-    /*.footer_section_contacts_address {*/
-    /*    font-size: 16px;*/
-    /*    font-weight: 400;*/
-    /*    line-height: 20px;*/
-    /*    color: #E4E5EA;*/
-    /*}*/
+    .footer_section_text:hover {
+        color: #7b83bb;
+    }
+    .footer_section_contacts_tel {
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 20px;
+        color: #E4E5EA;
+        transition-property: all;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 140ms;
+    }
+    .footer_section_contacts_tel:hover {
+        color: #7b83bb;
+    }
+    .footer_section_contacts_address {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 17px;
+        color: #E4E5EA;
+    }
     .footer_section_text:nth-child(n+2) {
         margin-top: 10px;
     }
-    /*.footer_section_text_contacts:nth-child(n+2) {*/
-    /*    margin-top: 20px;*/
-    /*}*/
-    /*.footer_section_contacts_title {*/
-    /*    text-align: end;*/
-    /*}*/
-    /*.footer_section_contacts_text {*/
-    /*    text-align: end;*/
-    /*}*/
-    /*.footer_section_contacts_icons {*/
-    /*    display: flex;*/
-    /*    justify-content: end;*/
-    /*}*/
-    /*.footer_section_contacts_icon {*/
-    /*    cursor: pointer;*/
-    /*}*/
-    /*.footer_section_contacts_icon:nth-child(n+2) {*/
-    /*    margin-left: 10px;*/
-    /*}*/
-    /*.footer_privacy_policy_text {*/
-    /*    font-family: Montserrat, Arial, sans-serif;*/
-    /*    font-size: 12px;*/
-    /*    font-weight: 400;*/
-    /*    line-height: 15px;*/
-    /*    color: #E4E5EA;*/
-    /*    text-align: end;*/
-    /*}*/
-    /*.footer_privacy_policy_text_part_2 {*/
-    /*    cursor: pointer;*/
-    /*    text-decoration: underline;*/
-    /*    transition-property: all;*/
-    /*    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);*/
-    /*    transition-duration: 140ms;*/
-    /*}*/
-    /*.footer_privacy_policy_text_part_2:hover {*/
-    /*    color: #7b83bb;*/
-    /*}*/
+    .footer_section_text_contacts:nth-child(n+2) {
+        margin-top: 20px;
+    }
+    .footer_section_contacts_icons {
+        display: flex;
+    }
+    .footer_section_contacts_icon {
+        cursor: pointer;
+    }
+    .footer_section_contacts_icon:nth-child(n+2) {
+        margin-left: 10px;
+    }
+    .footer_privacy_policy_text {
+        font-family: Montserrat, Arial, sans-serif;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 15px;
+        color: #E4E5EA;
+    }
+    .footer_privacy_policy_text_part_2 {
+        margin-top: 5px;
+        cursor: pointer;
+        text-decoration: underline;
+        transition-property: all;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 140ms;
+    }
+    .footer_privacy_policy_text_part_2:hover {
+        color: #7b83bb;
+    }
 }
