--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,6 @@
 /*- pixel perfect;*/
 /*!* hover for mobile*/
+/*!* tablet*/
 * {
     box-sizing: border-box;
     margin: 0;
@@ -50,7 +51,6 @@
     filter: blur(5px);
     border-radius: 50%;
 }
-
 .background_red_big_ball {
     position: absolute;
     z-index: -2;
@@ -69,7 +69,6 @@
     border-radius: 50%;
     filter: blur(5px);
 }
-
 .background_red_small_ball {
     position: absolute;
     z-index: -2;
@@ -88,7 +87,6 @@
     filter: blur(2.5px);
     border-radius: 50%;
 }
-
 .background_purple_light {
     position: absolute;
     z-index: -2;
@@ -100,7 +98,6 @@
     opacity: 0.5;
     filter: blur(196px);
 }
-
 .background_red_light {
     position: absolute;
     z-index: -2;
@@ -502,6 +499,96 @@
 }
 
 @media (max-width: 320px) {
+    .background_purple_ball {
+        position: absolute;
+        z-index: -2;
+        width: 40px;
+        height: 40px;
+        left: 296px;
+        top: 291px;
+        background: radial-gradient(
+                64% 64% at 27.25% 26.5%,
+                rgba(236, 208, 255, 0.64) 0%,
+                rgba(161, 93, 207, 0.24) 60%,
+                rgba(118, 49, 164, 0.21) 80%,
+                rgba(86, 24, 128, 0.23) 100%
+        );
+        box-shadow: 3px 6px 27px -10px rgba(177, 118, 217, 0.06);
+        filter: blur(5px);
+        border-radius: 50%;
+    }
+    .background_red_big_ball {
+        position: absolute;
+        z-index: -2;
+        width: 43px;
+        height: 43px;
+        left: 29px;
+        top: 457px;
+        background: radial-gradient(
+                64% 64% at 27.25% 26.5%,
+                rgba(255, 208, 208, 0.54) 0%,
+                rgba(212, 93, 93, 0.26) 60%,
+                rgba(167, 49, 49, 0.25) 80%,
+                rgba(130, 25, 25, 0.25) 100%
+        );
+        box-shadow: 3px 6px 27px -10px rgba(223, 125, 125, 0.06);
+        border-radius: 50%;
+        filter: blur(5px);
+    }
+    .background_red_small_ball {
+        display: none;
+    }
+    .background_purple_light {
+        position: absolute;
+        z-index: -2;
+        width: 259px;
+        height: 259px;
+        left: 258px;
+        top: 162px;
+        background: #833AB4;
+        opacity: 0.5;
+        filter: blur(196px);
+    }
+    .background_red_light {
+        position: absolute;
+        z-index: -2;
+        width: 211px;
+        height: 210px;
+        left: -55px;
+        top: 296px;
+        background: #961a1a;
+        opacity: 0.5;
+        filter: blur(196px);
+    }
+    .background_yellow_light {
+        position: absolute;
+        z-index: -2;
+        width: 200px;
+        height: 200px;
+        left: -66px;
+        top: 574px;
+        background: #FCB045;
+        opacity: 0.5;
+        filter: blur(196px);
+    }
+    .background_purple_glass {
+        .background__glass {
+            display: inherit;
+            width: 320px;
+            height: 445px;
+            left: 0;
+            top: 55px;
+            background: radial-gradient(
+                    238.53% 189.02% at 3.2% 3.49%,
+                    rgba(255, 246, 233, 0.1) 0%,
+                    rgba(26, 29, 35, 0.1) 26.62%,
+                    rgba(26, 29, 35, 0.1) 52.1%,
+                    rgba(26, 29, 35, 0.01) 70.17%,
+                    rgba(26, 29, 35, 0) 100%
+            );
+        }
+    }
+
     .app {
         padding: 0;
     }
@@ -509,37 +596,6 @@
     .box {
         width: 100%;
     }
-
-    .background_purple_ball {
-        width: 40px;
-        height: 40px;
-        left: 296px;
-        top: 236px;
-    }
-
-    .background_red_big_ball {
-        width: 43px;
-        height: 43px;
-        left: 29px;
-        top: 402px;
-    }
-
-    .background_red_small_ball {
-        display: none;
-    }
-
-    .background_purple_light {
-        left: 258px;
-        top: 107px;
-    }
-
-    .background_red_light {
-        width: 211px;
-        height: 210px;
-        left: -55px;
-        top: 241px;
-    }
-
     .header_desktop {
         display: none;
     }
@@ -656,7 +712,6 @@
         border-top: 1px solid transparent;
         -webkit-border-image: -webkit-linear-gradient(left, #fcb045 36.99%, #fd1d1d 100%);
         border-image-slice: 1;
-        /*(to right, #fcb045 75%, #ff3f78 100%);*/
     }
 
     .mobile_right_block_gift_text {
