--- a/src/App.module.css
+++ b/src/App.module.css
@@ -24,7 +24,10 @@
 
 .app {
     display: block;
+    margin: 0 auto;
     position: absolute;
+    overflow: hidden;
+    text-overflow: clip;
     z-index: -1;
     width: 100%;
     min-height: 100vh;
@@ -113,6 +116,8 @@
 .box {
     display: block;
     box-sizing: border-box;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .welbex_logo {
@@ -236,7 +241,7 @@
     color: #E4E5EA;
 }
 
-@media (min-width: 320px) and (max-width: 1440px) {
+@media (min-width: 321px) {
     .app {
         padding: 46px 150px 0 150px;
     }
@@ -412,8 +417,7 @@
     .footer {
         display: block;
         height: 315px;
-        margin-top: 70px;
-        padding: 55px 0;
+        padding: 70px 0 55px 0;
     }
 
     .footer_sections {
@@ -517,23 +521,23 @@
         border-radius: 50%;
     }
     .background_red_big_ball {
-        position: absolute;
-        z-index: -2;
-        width: 43px;
-        height: 43px;
-        left: 29px;
-        top: 457px;
-        background: radial-gradient(
-                64% 64% at 27.25% 26.5%,
-                rgba(255, 208, 208, 0.54) 0%,
-                rgba(212, 93, 93, 0.26) 60%,
-                rgba(167, 49, 49, 0.25) 80%,
-                rgba(130, 25, 25, 0.25) 100%
-        );
-        box-shadow: 3px 6px 27px -10px rgba(223, 125, 125, 0.06);
-        border-radius: 50%;
-        filter: blur(5px);
-    }
+         position: absolute;
+         z-index: -2;
+         width: 43px;
+         height: 43px;
+         left: 29px;
+         top: 457px;
+         background: radial-gradient(
+                 64% 64% at 27.25% 26.5%,
+                 rgba(255, 208, 208, 0.54) 0%,
+                 rgba(212, 93, 93, 0.26) 60%,
+                 rgba(167, 49, 49, 0.25) 80%,
+                 rgba(130, 25, 25, 0.25) 100%
+         );
+         box-shadow: 3px 6px 27px -10px rgba(223, 125, 125, 0.06);
+         border-radius: 50%;
+         filter: blur(5px);
+     }
     .background_red_small_ball {
         display: none;
     }
@@ -570,47 +574,35 @@
         opacity: 0.5;
         filter: blur(196px);
     }
-    .background_purple_glass {
-        .background__glass {
-            display: inherit;
-            width: 320px;
-            height: 445px;
-            left: 0;
-            top: 55px;
-            background: radial-gradient(
-                    238.53% 189.02% at 3.2% 3.49%,
-                    rgba(255, 246, 233, 0.1) 0%,
-                    rgba(26, 29, 35, 0.1) 26.62%,
-                    rgba(26, 29, 35, 0.1) 52.1%,
-                    rgba(26, 29, 35, 0.01) 70.17%,
-                    rgba(26, 29, 35, 0) 100%
-            );
-        }
+    .background__glass {
+        display: inherit;
+        width: 320px;
+        height: 445px;
+        left: 0;
+        top: 55px;
+        background: radial-gradient(
+                238.53% 189.02% at 3.2% 3.49%,
+                rgba(255, 246, 233, 0.1) 0%,
+                rgba(26, 29, 35, 0.1) 26.62%,
+                rgba(26, 29, 35, 0.1) 52.1%,
+                rgba(26, 29, 35, 0.01) 70.17%,
+                rgba(26, 29, 35, 0) 100%
+        );
     }
 
-    .app {
-        padding: 0;
-    }
-
-    .box {
-        width: 100%;
-    }
     .header_desktop {
         display: none;
     }
-
     .mobile_header {
         display: block;
         padding: 20px 15px;
         height: 55px;
         background: black;
     }
-
     .mobile_header_menu_services_items_list {
         display: flex;
         justify-content: space-between;
     }
-
     .mobile_header_menu_services_item {
         text-transform: uppercase;
         font-size: 12px;
@@ -618,76 +610,64 @@
         line-height: 15px;
         color: #E4E5EA;
     }
+
     .content {
         display: none;
     }
-
     .mobile_content {
         display: flex;
         flex-direction: column;
         padding: 40px 15px 60px 15px;
     }
-
     .left_block_title_text_part_1 {
         font-size: 36px;
         font-weight: 400;
         line-height: 44px;
         color: #E4E5EA;
     }
-
     .left_block_tile_welbex_text {
         font-size: 36px;
         font-weight: 900;
         line-height: 44px;
         color: #E4E5EA;
     }
-
     .left_block_tile_welbex_text_part_1 {
         color: #FCB045;
     }
-
     .left_block_subtitle {
         margin-top: 15px;
     }
-
     .right_block {
         display: none;
     }
-
     .right_block_button_consultation_container {
         display: none;
     }
-
     .mobile_right_block {
         margin-top: 47px;
     }
-
     .mobile_right_block_title_white_text {
         font-size: 18px;
         font-weight: 500;
         line-height: 22px;
         color: #E4E5EA;
     }
-
     .mobile_right_block_title_gradient_text {
         font-size: 18px;
         font-weight: 700;
         line-height: 22px;
         text-transform: uppercase;
     }
-
     .mobile_right_block_title_part_2 {
         background: linear-gradient(to right, #fcb045 2%, #ff3f78 60%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
-
     .mobile_right_block_title_part_3 {
         background: linear-gradient(to right, #fcb045 75%, #ff3f78 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
-
     .mobile_right_block_gifts_list {
         margin-top: 20px;
         display: grid;
@@ -695,13 +675,11 @@
         grid-template-columns: 115px 141px;
         grid-auto-rows: minmax(16px, auto);
     }
-
     .mobile_right_block_gift {
         display: flex;
         align-items: center;
         width: 135px;
     }
-
     .mobile_right_block_gift_dash {
         box-sizing: border-box;
         width: 10px;
@@ -709,7 +687,6 @@
         -webkit-border-image: -webkit-linear-gradient(left, #fcb045 36.99%, #fd1d1d 100%);
         border-image-slice: 1;
     }
-
     .mobile_right_block_gift_text {
         margin-left: 5px;
         text-transform: uppercase;
